-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
None
-
Affects Version/s: repo-panama
-
Component/s: tools
Downcall stubs/native invokers are currently never free. After creation they are stored in a cache, and they stay there for the lifetime of the VM.
We could implement a weak reference cache where the values are NativeEntryPoints, and then register those NativeEntryPoints with a cleaner that frees the downcall stub when the NativeEntryPoint becomes unreachable.
We could implement a weak reference cache where the values are NativeEntryPoints, and then register those NativeEntryPoints with a cleaner that frees the downcall stub when the NativeEntryPoint becomes unreachable.