8276648: Downcall stubs are never freed

Reviewed-by: mcimadamore